--- a/src/index.css
+++ b/src/index.css
@@ -174,7 +174,7 @@ img {
   padding: 1em;
   letter-spacing: 1.3px;
   color: var(--very-dark-blue);
-  background: rgb(228, 228, 228);
+  background: rgb(255, 255, 255);
   border: none;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
@@ -549,7 +549,7 @@ img {
 }
 
 @media screen and (min-width: 575px) {
-  form {
+  .email-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -612,4 +612,59 @@ footer {
     margin-right: auto;
     margin-left: 3em;
   }
+}
+
+.login-section {
+  height: 80vh;
+  display: grid;
+  place-items: center;
+}
+
+.form-container {
+  width: 300px;
+  border: 2px solid black;
+  padding: 1em;
+  border-radius: 5px;
+  font-size: 12px;
+}
+#email {
+  margin-bottom: 1em;
+  margin-top: 0.5em;
+  width: 100%;
+  padding: 0.8em;
+  border-radius: 5px;
+}
+#email:hover,
+#email:focus {
+  background-color: transparent;
+  border: 2px solid var(--Soft-Red);
+  transition: 0.3s;
+}
+#password {
+  width: 100%;
+  padding: 0.8em;
+  border-radius: 5px;
+  margin-bottom: 1em;
+  margin-top: 0.5em;
+}
+#password:hover,
+#password:focus {
+  background-color: transparent;
+  border: 2px solid var(--Soft-Red);
+  transition: 0.3s;
+}
+#login-btn {
+  color: white;
+  background-color: var(--Soft-Red);
+  border: 1px solid var(--Soft-Red);
+  border-radius: 5px;
+  width: 100%;
+  padding: 0.8em;
+  cursor: pointer;
+  margin-top: 0.5em;
+}
+#login-btn:hover {
+  background-color: transparent;
+  color: var(--Soft-Red);
+  transition: 0.3s;
 }
